# lui-xml

./: .gitignore  CMakeLists.txt  DISCLAIMER.md  Doxyfile  LICENSE.md  MIGRATION.md  PROVENANCE.md  README.md  idf_component.yml
.github/workflows/: ci.yml
docs/development/implementation/: 00-ANTI-PATTERNS-TO-AVOID.md  01-PRINCIPLES.md  02-WORKFLOW.md  03-CODE-PRODUCTION.md  04-VALIDATION.md  05-REQUIREMENTS-ANALYSIS.md  06-COMMON-PITFALLS.md  07-CHECKLISTS.md
docs/development/specs/: 01-PRINCIPLES.md  02-WORKFLOW.md  03-SPEC-PRODUCTION.md  04-SPEC-VALIDATION.md  05-REQUIREMENTS-ANALYSIS.md  06-COMMON-PITFALLS.md  07-CHECKLISTS.md  README.md
docs/src/xml/: README.md
examples/others/xml/: lui_example_xml_1.c  lui_example_xml_2.c
src/: luixml_compat.c  luixml_compat.h
src/xml/: lui_xml.c  lui_xml.h  lui_xml_base_types.c  lui_xml_base_types.h  lui_xml_component.c  lui_xml_component.h  lui_xml_component_private.h  lui_xml_load.c  lui_xml_load.h  lui_xml_load_private.h  lui_xml_parser.c  lui_xml_parser.h  lui_xml_private.h  lui_xml_style.c  lui_xml_style.h  lui_xml_test.c  lui_xml_test.h  lui_xml_translation.c  lui_xml_translation.h  lui_xml_update.c  lui_xml_update.h  lui_xml_utils.c  lui_xml_utils.h  lui_xml_widget.c  lui_xml_widget.h
src/xml/parsers/: lui_xml_arc_parser.c  lui_xml_arc_parser.h  lui_xml_bar_parser.c  lui_xml_bar_parser.h  lui_xml_button_parser.c  lui_xml_button_parser.h  lui_xml_buttonmatrix_parser.c  lui_xml_buttonmatrix_parser.h  lui_xml_calendar_parser.c  lui_xml_calendar_parser.h  lui_xml_canvas_parser.c  lui_xml_canvas_parser.h  lui_xml_chart_parser.c  lui_xml_chart_parser.h  lui_xml_checkbox_parser.c  lui_xml_checkbox_parser.h  lui_xml_dropdown_parser.c  lui_xml_dropdown_parser.h  lui_xml_image_parser.c  lui_xml_image_parser.h  lui_xml_imagebutton_parser.c  lui_xml_imagebutton_parser.h  lui_xml_keyboard_parser.c  lui_xml_keyboard_parser.h  lui_xml_label_parser.c  lui_xml_label_parser.h  lui_xml_obj_parser.c  lui_xml_obj_parser.h  lui_xml_qrcode_parser.c  lui_xml_qrcode_parser.h  lui_xml_roller_parser.c  lui_xml_roller_parser.h  lui_xml_scale_parser.c  lui_xml_scale_parser.h  lui_xml_slider_parser.c  lui_xml_slider_parser.h  lui_xml_spangroup_parser.c  lui_xml_spangroup_parser.h  lui_xml_spinbox_parser.c  lui_xml_spinbox_parser.h  (+10 more)
tests/: CMakeLists.txt  test_integration_simple_ui.c  test_namespace_compliance.c  test_parser_comprehensive.c  test_parser_minimal.c  test_utils.c  test_utils.h  test_widget_button.c  test_widget_image.c  test_widget_label.c  valgrind.supp
xmls/: README.md
